--- a/package.json
+++ b/package.json
@@ -5,8 +5,20 @@
   "dependencies": {
     "antd": "^3.19.2",
     "axios": "^0.18.1",
+    "markdown-it": "^9.1.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-ins": "^2.0.0",
+    "markdown-it-mark": "^2.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-markdown-editor": "^0.6.2",
+    "react-markdown-editor-lite": "^0.4.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.1"
   },
