--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-markdown-editor": "^0.6.2",
     "react-markdown-editor-lite": "^0.4.3",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
