--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-.idea/
+.idea
+*.iws
+*.iml
+*.ipr
+
 # dependencies
 /node_modules
 /.pnp
